@@ -71,24 +71,18 @@ theme_symbols[] =
   { "HLINE", 		TOKEN_D_HLINE },
   { "VLINE",		TOKEN_D_VLINE },
   { "SHADOW",		TOKEN_D_SHADOW },
-  { "POLYGON",		TOKEN_D_POLYGON },
   { "ARROW",		TOKEN_D_ARROW },
   { "DIAMOND",		TOKEN_D_DIAMOND },
-  { "OVAL",		TOKEN_D_OVAL },
-  { "STRING",		TOKEN_D_STRING },
   { "BOX",		TOKEN_D_BOX },
   { "FLAT_BOX",		TOKEN_D_FLAT_BOX },
   { "CHECK",		TOKEN_D_CHECK },
   { "OPTION",		TOKEN_D_OPTION },
-  { "CROSS",		TOKEN_D_CROSS },
-  { "RAMP",		TOKEN_D_RAMP },
   { "TAB",		TOKEN_D_TAB },
   { "SHADOW_GAP",	TOKEN_D_SHADOW_GAP },
   { "BOX_GAP",		TOKEN_D_BOX_GAP },
   { "EXTENSION",	TOKEN_D_EXTENSION },
   { "FOCUS",		TOKEN_D_FOCUS },
   { "SLIDER",		TOKEN_D_SLIDER },
-  { "ENTRY",		TOKEN_D_ENTRY },
   { "HANDLE",		TOKEN_D_HANDLE },
   { "STEPPER",		TOKEN_D_STEPPER },
 
