@@ -58,24 +58,24 @@ enum
   TOKEN_D_HLINE,
   TOKEN_D_VLINE,
   TOKEN_D_SHADOW,
-  TOKEN_D_POLYGON,
+  TOKEN_UNUSED_1,
   TOKEN_D_ARROW,
   TOKEN_D_DIAMOND,
-  TOKEN_D_OVAL,
-  TOKEN_D_STRING,
+  TOKEN_UNUSED_2,
+  TOKEN_UNUSED_3,
   TOKEN_D_BOX,
   TOKEN_D_FLAT_BOX,
   TOKEN_D_CHECK,
   TOKEN_D_OPTION,
-  TOKEN_D_CROSS,
-  TOKEN_D_RAMP,
+  TOKEN_UNUSED_4,
+  TOKEN_UNUSED_5,
   TOKEN_D_TAB,
   TOKEN_D_SHADOW_GAP,
   TOKEN_D_BOX_GAP,
   TOKEN_D_EXTENSION,
   TOKEN_D_FOCUS,
   TOKEN_D_SLIDER,
-  TOKEN_D_ENTRY,
+  TOKEN_UNUSED_6,
   TOKEN_D_HANDLE,
   TOKEN_D_STEPPER,
   TOKEN_TRUE,
